--- a/03_Wednesday.Rmd
+++ b/03_Wednesday.Rmd
@@ -1,15 +1,12 @@
 ---
 title: "Wednesday"
-output: html_notebook
 ---
-
 
 ```{r setup, include=FALSE, message=FALSE, warning=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(vegan)
 library(tidyverse)
 ```
-
 
 ### [Question 11: Do an RDA and a CCA on the Dune Meadow data set, using the full set of environmental variables.]{style="color:cornflowerblue"}
 
@@ -73,11 +70,7 @@ vif.cca <- vif.cca(dune.cca)
 vif.cca
 ```
 
-Function vif.cca gives the variance inflation factors for each
-constraint or contrast in factor constraints. In partial ordination,
-conditioning variables are analysed together with constraints. Variance
-inflation is a diagnostic tool to identify useless constraints. A common
-rule is that values over 10 indicate redundant constraints.
+Function vif.cca gives the variance inflation factors for each constraint or contrast in factor constraints. In partial ordination, conditioning variables are analysed together with constraints. Variance inflation is a diagnostic tool to identify useless constraints. A common rule is that values over 10 indicate redundant constraints.
 
 ------------------------------------------------------------------------
 
@@ -154,18 +147,13 @@ par(mfrow= c(1,1))
 
 ### [Question 15: Investigate management regimes.]{style="color:cornflowerblue"}
 
-Next, you should investigate whether the four different management
-regimes (SF standard farming, BF biodynamical farming, HF hobby farming,
-and NM nature management) have any effect on the species distribution.
-This is done by using these four management types as environmental
-variables in a constrained ordination.
+Next, you should investigate whether the four different management regimes (SF standard farming, BF biodynamical farming, HF hobby farming, and NM nature management) have any effect on the species distribution. This is done by using these four management types as environmental variables in a constrained ordination.
 
 #### [Question:]{style="color:forestgreen"}
 
 #### [15.1 Inspect and interpret the results of the permutations and graph! Compare with the CCA on the full set of explanatory data in exercise 13.]{style="color:forestgreen"}
 
-To investigate if the vegetational pattern is an effect of management,
-or if the pattern is random, Monte Carlo permutations will be used.
+To investigate if the vegetational pattern is an effect of management, or if the pattern is random, Monte Carlo permutations will be used.
 
 ```{r ex15, inclue=TRUE, warning=FALSE, message=FALSE}
 # CCA using only Management as the environmental variable
@@ -189,8 +177,7 @@ par(mfrow =c(1,2))
 
 ### [Question 16: Next, investigate whether initial soil characteristics (A1 and moisture) also are important for differences in species composition between fields.]{style="color:cornflowerblue"}
 
-To do this, do another CCA with A1 and Moisture as environmental
-variables and perform a significance test.
+To do this, do another CCA with A1 and Moisture as environmental variables and perform a significance test.
 
 #### [Question:]{style="color:forestgreen"}
 
@@ -214,17 +201,7 @@ ordiplot(dune.ccaA1ms, type="text", main="CCA A1 and moisture")
 
 ### [Question 17: Partial ordination]{style="color:cornflowerblue"}
 
-Now, you have concluded that both soil characteristics and management
-type are determining the species composition significantly. But, what if
-the observed differences between management types are not caused by
-management type but by initial differences in soil characteristics? To
-investigate this, you have to test whether there still is a difference
-in vegetation between management types, after accounting for (i.e.
-removing) the effects of soil characteristics. This is done by a partial
-CCA ordination. Partial ordinations are used to eliminate effects of
-selected variables by specifying them as covariates. In this case, use
-the two soil characterising variables (A1 and Moisture) as covariates,
-and the four management types as environmental variables.
+Now, you have concluded that both soil characteristics and management type are determining the species composition significantly. But, what if the observed differences between management types are not caused by management type but by initial differences in soil characteristics? To investigate this, you have to test whether there still is a difference in vegetation between management types, after accounting for (i.e. removing) the effects of soil characteristics. This is done by a partial CCA ordination. Partial ordinations are used to eliminate effects of selected variables by specifying them as covariates. In this case, use the two soil characterising variables (A1 and Moisture) as covariates, and the four management types as environmental variables.
 
 #### [Questions:]{style="color:forestgreen"}
 
@@ -254,17 +231,13 @@ ordihull(
 
 ### [Question 18: Partial ordination II]{style="color:cornflowerblue"}
 
-The amount of applied manure is a third important variable given in the
-environmental data set associated with the dune meadow data set. Repeat
-exercise 17, but with manure added to the set of covariates.
+The amount of applied manure is a third important variable given in the environmental data set associated with the dune meadow data set. Repeat exercise 17, but with manure added to the set of covariates.
 
 #### [Questions:]{style="color:forestgreen"}
 
 #### [18.1 What was the effect of adding manure to the set of covariates?]{style="color:forestgreen"}
 
-We may expect that Management and Manure are related, check visually by
-making a boxplot of Manure vs Management type using the R code:
-boxplot(Manure\~Management, data = dune.env.original).
+We may expect that Management and Manure are related, check visually by making a boxplot of Manure vs Management type using the R code: boxplot(Manure\~Management, data = dune.env.original).
 
 #### [18.2 What does the result tell you?]{style="color:forestgreen"}
 
@@ -294,9 +267,7 @@ ordihull(
 
 ### [Question 19: Forward selection]{style="color:cornflowerblue"}
 
-We have now concluded that management type is of subordinate importance.
-Now, you want to test the importance or significance of individual
-environmental variables. This is done by Forward selection.
+We have now concluded that management type is of subordinate importance. Now, you want to test the importance or significance of individual environmental variables. This is done by Forward selection.
 
 #### [Questions:]{style="color:forestgreen"}
 
@@ -335,10 +306,7 @@ sel.env.dune$anova
 ordiplot(sel.env.dune)
 ```
 
-Since there is (a potentially high) number of tests of significance
-during the forward selection procedure, it is better to apply a
-correction for multiple testing issue. Here we apply the Holm
-correction.
+Since there is (a potentially high) number of tests of significance during the forward selection procedure, it is better to apply a correction for multiple testing issue. Here we apply the Holm correction.
 
 ```{r}
 sel.env.dune_adj <- sel.env.dune
@@ -347,4 +315,3 @@ sel.env.dune_adj$anova
 ```
 
 ------------------------------------------------------------------------
-
